@@ -1,3 +1,4 @@
+	* improve error_code and error_category support in python bindings
 	* fix python binding for external_ip_alert
 
 0.16.14 release
